<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/namaPedagang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorPrimaryDark"
            android:textColor="@color/colorPrimaryDark"
            android:backgroundTint="@color/colorPrimaryDark"
            android:hint="@string/username"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/noHp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorPrimaryDark"
            android:textColor="@color/colorPrimaryDark"
            android:backgroundTint="@color/colorPrimaryDark"
            android:inputType="phone"
            android:hint="@string/nohp"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorPrimaryDark"
            android:textColor="@color/colorPrimaryDark"
            android:backgroundTint="@color/colorPrimaryDark"
            android:inputType="textPassword"
            android:hint="@string/password"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/rePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorPrimaryDark"
            android:textColor="@color/colorPrimaryDark"
            android:backgroundTint="@color/colorPrimaryDark"
            android:inputType="textPassword"
            android:hint="@string/retypepassword"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/alamatKios"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorPrimaryDark"
            android:textColor="@color/colorPrimaryDark"
            android:backgroundTint="@color/colorPrimaryDark"
            android:inputType="text"
            android:hint="@string/alamatkios"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Spinner
            android:id="@+id/jenisKelamin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorPrimaryDark"
            android:textColor="@color/colorPrimaryDark"
            android:backgroundTint="@color/colorPrimaryDark"
            android:hint="@string/jenisKelamin"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/submitInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/sign_up_selector_bg"
        android:textColor="@drawable/sign_up_selector_fg"
        android:text="Submit"/>
</LinearLayout>